--- a/.classpath
+++ b/.classpath
@@ -2,39 +2,40 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="src" path="20L2GR3/src"/>
-	<classpathentry kind="lib" path="C:/Users/krzysztof/Desktop/hs/hibernate-release-5.4.14.Final/lib/required/antlr-2.7.7.jar"/>
-	<classpathentry kind="lib" path="C:/Users/krzysztof/Desktop/hs/hibernate-release-5.4.14.Final/lib/required/byte-buddy-1.10.7.jar"/>
-	<classpathentry kind="lib" path="C:/Users/krzysztof/Desktop/hs/hibernate-release-5.4.14.Final/lib/required/classmate-1.5.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/krzysztof/Desktop/hs/hibernate-release-5.4.14.Final/lib/required/dom4j-2.1.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/krzysztof/Desktop/hs/hibernate-release-5.4.14.Final/lib/required/FastInfoset-1.2.15.jar"/>
-	<classpathentry kind="lib" path="C:/Users/krzysztof/Desktop/hs/hibernate-release-5.4.14.Final/lib/required/hibernate-commons-annotations-5.1.0.Final.jar"/>
-	<classpathentry kind="lib" path="C:/Users/krzysztof/Desktop/hs/hibernate-release-5.4.14.Final/lib/required/hibernate-core-5.4.14.Final.jar"/>
-	<classpathentry kind="lib" path="C:/Users/krzysztof/Desktop/hs/hibernate-release-5.4.14.Final/lib/required/istack-commons-runtime-3.0.7.jar"/>
-	<classpathentry kind="lib" path="C:/Users/krzysztof/Desktop/hs/hibernate-release-5.4.14.Final/lib/required/jandex-2.1.1.Final.jar"/>
-	<classpathentry kind="lib" path="C:/Users/krzysztof/Desktop/hs/hibernate-release-5.4.14.Final/lib/required/javassist-3.24.0-GA.jar"/>
-	<classpathentry kind="lib" path="C:/Users/krzysztof/Desktop/hs/hibernate-release-5.4.14.Final/lib/required/javax.activation-api-1.2.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/krzysztof/Desktop/hs/hibernate-release-5.4.14.Final/lib/required/javax.persistence-api-2.2.jar"/>
-	<classpathentry kind="lib" path="C:/Users/krzysztof/Desktop/hs/hibernate-release-5.4.14.Final/lib/required/jaxb-api-2.3.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/krzysztof/Desktop/hs/hibernate-release-5.4.14.Final/lib/required/jaxb-runtime-2.3.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/krzysztof/Desktop/hs/hibernate-release-5.4.14.Final/lib/required/jboss-logging-3.3.2.Final.jar"/>
-	<classpathentry kind="lib" path="C:/Users/krzysztof/Desktop/hs/hibernate-release-5.4.14.Final/lib/required/jboss-transaction-api_1.2_spec-1.1.1.Final.jar"/>
-	<classpathentry kind="lib" path="C:/Users/krzysztof/Desktop/hs/hibernate-release-5.4.14.Final/lib/required/stax-ex-1.8.jar"/>
-	<classpathentry kind="lib" path="C:/Users/krzysztof/Desktop/hs/hibernate-release-5.4.14.Final/lib/required/txw2-2.3.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/krzysztof/Desktop/hs/mysql-connector-java-5.1.48-bin.jar"/>
-	<classpathentry kind="lib" path="C:/Users/krzysztof/Desktop/hs/controlsfx-8.40.16.jar"/>
-	<classpathentry kind="lib" path="C:/Users/krzysztof/Desktop/hs/itempdf/itextpdf-5.5.9.jar"/>
-	<classpathentry kind="lib" path="C:/Users/krzysztof/Desktop/hs/itempdf/itextpdf-5.5.9-javadoc.jar"/>
-	<classpathentry kind="lib" path="C:/Users/krzysztof/Desktop/hs/itempdf/itextpdf-5.5.9-sources.jar"/>
-	<classpathentry kind="lib" path="C:/Users/krzysztof/Desktop/hs/itempdf/itext-pdfa-5.5.9.jar"/>
-	<classpathentry kind="lib" path="C:/Users/krzysztof/Desktop/hs/itempdf/itext-pdfa-5.5.9-javadoc.jar"/>
-	<classpathentry kind="lib" path="C:/Users/krzysztof/Desktop/hs/itempdf/itext-pdfa-5.5.9-sources.jar"/>
-	<classpathentry kind="lib" path="C:/Users/krzysztof/Desktop/hs/itempdf/itext-xtra-5.5.9.jar"/>
-	<classpathentry kind="lib" path="C:/Users/krzysztof/Desktop/hs/itempdf/itext-xtra-5.5.9-javadoc.jar"/>
-	<classpathentry kind="lib" path="C:/Users/krzysztof/Desktop/hs/itempdf/itext-xtra-5.5.9-sources.jar"/>
-	<classpathentry kind="lib" path="C:/Users/krzysztof/Desktop/hs/itempdf/xmlworker-5.5.9.jar"/>
-	<classpathentry kind="lib" path="C:/Users/krzysztof/Desktop/hs/itempdf/xmlworker-5.5.9-javadoc.jar"/>
-	<classpathentry kind="lib" path="C:/Users/krzysztof/Desktop/hs/itempdf/xmlworker-5.5.9-sources.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
-	<classpathentry kind="lib" path="C:/Users/krzysztof/Downloads/pdfgenerator.jar"/>
+	<classpathentry kind="lib" path="lib/antlr-2.7.7.jar"/>
+	<classpathentry kind="lib" path="lib/byte-buddy-1.10.7.jar"/>
+	<classpathentry kind="lib" path="lib/classmate-1.5.1.jar"/>
+	<classpathentry kind="lib" path="lib/controlsfx-8.40.16.jar"/>
+	<classpathentry kind="lib" path="lib/dom4j-2.1.1.jar"/>
+	<classpathentry kind="lib" path="lib/FastInfoset-1.2.15.jar"/>
+	<classpathentry kind="lib" path="lib/hibernate-commons-annotations-5.1.0.Final.jar"/>
+	<classpathentry kind="lib" path="lib/hibernate-core-5.4.14.Final.jar"/>
+	<classpathentry kind="lib" path="lib/istack-commons-runtime-3.0.7.jar"/>
+	<classpathentry kind="lib" path="lib/itext-pdfa-5.5.9-javadoc.jar"/>
+	<classpathentry kind="lib" path="lib/itext-pdfa-5.5.9-sources.jar"/>
+	<classpathentry kind="lib" path="lib/itext-pdfa-5.5.9.jar"/>
+	<classpathentry kind="lib" path="lib/itext-xtra-5.5.9-javadoc.jar"/>
+	<classpathentry kind="lib" path="lib/itext-xtra-5.5.9-sources.jar"/>
+	<classpathentry kind="lib" path="lib/itext-xtra-5.5.9.jar"/>
+	<classpathentry kind="lib" path="lib/itextpdf-5.5.9-javadoc.jar"/>
+	<classpathentry kind="lib" path="lib/itextpdf-5.5.9-sources.jar"/>
+	<classpathentry kind="lib" path="lib/itextpdf-5.5.9.jar"/>
+	<classpathentry kind="lib" path="lib/jandex-2.1.1.Final.jar"/>
+	<classpathentry kind="lib" path="lib/javassist-3.24.0-GA.jar"/>
+	<classpathentry kind="lib" path="lib/javax.activation-api-1.2.0.jar"/>
+	<classpathentry kind="lib" path="lib/javax.persistence-api-2.2.jar"/>
+	<classpathentry kind="lib" path="lib/jaxb-api-2.3.1.jar"/>
+	<classpathentry kind="lib" path="lib/jaxb-runtime-2.3.1.jar"/>
+	<classpathentry kind="lib" path="lib/jboss-logging-3.3.2.Final.jar"/>
+	<classpathentry kind="lib" path="lib/jboss-transaction-api_1.2_spec-1.1.1.Final.jar"/>
+	<classpathentry kind="lib" path="lib/mysql-connector-java-8.0.19.jar"/>
+	<classpathentry kind="lib" path="lib/pdfgenerator.jar"/>
+	<classpathentry kind="lib" path="lib/stax-ex-1.8.jar"/>
+	<classpathentry kind="lib" path="lib/txw2-2.3.1.jar"/>
+	<classpathentry kind="lib" path="lib/xmlworker-5.5.9-javadoc.jar"/>
+	<classpathentry kind="lib" path="lib/xmlworker-5.5.9-sources.jar"/>
+	<classpathentry kind="lib" path="lib/xmlworker-5.5.9.jar"/>
+	<classpathentry kind="src" path="PdfGenerator"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
